2015-05-12: 
  - Fixed a bug introduced by side-effects of manipulating the arguments of 'readfixed'. 
  - Make sure that codebook entries for items in external data sources are complete.
  - Add dots to 'format_html.codebookEntry' formal arguments.
  - Improved `toLatex` formatting of `ftable`s
  - Set version number to 0.98.1

2015-05-11: Make memisc:::trimws work without changing locale
  - Complete rewrite of major parts of 'import-internal-spss-syntax.R': 
  - Handling of SPSS syntax files for fixed format data files is changed from a presumptious vectorising approach to 
    an old-school but more flexible and stable Turing approach. 
    'spss.fixed.file()' should work for a wider range of situations.

2015-05-10: 
  - Use endash in HTML format of codebooks, correct removal extra styling of variable names

2015-05-09: 
  - Remove hardcoded styling of variable names in codebook entries.
  - Codebook support for numeric vectors and factors
  - Fix console output of data.set objects

2015-04-29:
  - Step up version number and date.
  - Removed functions panel.errbars, Termplot, Simulate, and associated stuff (buckets etc.)

2015-04-28:
  - Documented 'format_html' method for codebooks
  - Added HTML formatting of codebooks.
  - Bugfix in 'codebook-methods.R': specify sensible defauls for 'toprule' and 'midrule' in format,codebookEntry-method.
  - Added dumentation for 'format_html' methods for "ftable" and "mtable" objects.
  - Added documentation for 'format_html' function
  - Documented 'wild.codes' function
  - Fixed as.data.set,list-method, added documentation for as.data.set,list-method

2015-04-26:
  - Changed vignette engine to 'rmarkdown' as this gives better output.
  - Added html vignette 'ANES 1948'
  - Fix html formatting of mtables
  - Bugfix of format_html.ftable: Now digits after the dot are handled correctly.
  - Some adjustments of HTML formatting of "mtables"
  - Support for HTML formatting of "ftables"